# logion-collator

./: .dockerignore  Dockerfile  Dockerfile.build-debian11  README.md  local-zombienet.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
res/: local-chainspec.json  local-chainspec.raw.json  local.json  local.raw.json  logion-dev.json  logion-dev.raw.json  logion-test.json  logion-test.raw.json  logion.json  logion.raw.json  main-plain.json  rochefort.json  rochefort.raw.json  rococo-local-logion-plain.json  rococo-local-logion-raw.json  westmalle.json  westmalle.raw.json
runtime/: Cargo.toml
runtime/src/: apis.rs  lib.rs  xcm_config.rs
runtime/src/configs/: logion_config.rs  mod.rs  tokenomics.rs  xcm_config.rs
runtime/src/weights/: mod.rs
scripts/: build_debian_collator.sh  download_logion.sh  download_polkadot.sh  run_collator.sh  run_validator.sh
